// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> render Paragraph with defalut props 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_color_default mfui-paragraph_space_wide mfui-paragraph_has-margin"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render Paragraph with passed props 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_purple mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with align prop 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_center mfui-paragraph_color_purple mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with align prop 2`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_purple mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with color prop 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_inherit mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with color prop 2`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_default mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with color prop 3`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_gray mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with color prop 4`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_white mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with color prop 5`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_green mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with color prop 6`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_purple mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with hasMargin prop 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_purple mfui-paragraph_space_wide mfui-paragraph_has-margin test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with hasMargin prop 2`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_purple mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with space prop 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_purple mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render with space prop 2`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_purple mfui-paragraph_space_tight test"
>
  Test paragraph text
</p>
`;
